Move factory functions to the respective registration modules. Make factory functions return wrappers instead of partial functions to ease type inference. Add inference about global and incremental registrators in registration module list.

--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -129,53 +129,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b16a71b-5995-4478-baed-558ca7607207",
-   "metadata": {},
-   "source": [
-    "### Configure preprocessor and registrator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "002faf54-75d6-4450-bd99-450ebe5f4497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def registration_worker(\n",
-    "    source_loader: PointCloudLoader,\n",
-    "    target_loader: PointCloudLoader,\n",
-    "    preprocessor: Callable,\n",
-    "    registrator: Callable,\n",
-    ") -> RegistrationResult:\n",
-    "    \"\"\"Worker function that performs the point cloud registration.\"\"\"\n",
-    "\n",
-    "    source: PointCloud = source_loader().unwrap()\n",
-    "    target: PointCloud = target_loader().unwrap()\n",
-    "\n",
-    "    preprocessed_source: PointCloud = source\n",
-    "    preprocessed_target: PointCloud = target\n",
-    "\n",
-    "    for preprocessor in preprocessors:\n",
-    "        preprocessed_source: PointCloud = preprocessor(preprocessed_source)\n",
-    "\n",
-    "    for preprocessor in preprocessors:\n",
-    "        preprocessed_target: PointCloud = preprocessor(preprocessed_target)\n",
-    "\n",
-    "    result: RegistratorResult = registrator(\n",
-    "        source=preprocessed_source,\n",
-    "        target=preprocessed_target,\n",
-    "    )\n",
-    "\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "16ab0cfe-8d07-4b73-ac3a-b3f48e7b5910",
    "metadata": {},
    "source": [
-    "### Transformation Helpers"
+    "### Logging Helpers"
    ]
   },
   {
@@ -204,73 +161,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "59fa67a2-b3d6-4e51-9967-7df97d9fa2d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-07-29 18:33:53.426\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mRegistrator: global\u001b[0m\n",
-      "\u001b[32m2024-07-29 18:33:53.427\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mRegistrator: refinement\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\npreprocessors: list[PointCloudProcessor] = [\\n    build_point_cloud_processor(item).unwrap()\\n    for item in module_config[\"preprocessors\"]\\n]\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "CONFIG_FILE: Path = Path(\"/home/martin/dev/benthoscan/config/registration.toml\")\n",
+    "from benthoscan.registration.pipeline import Module, ModuleList, get_required_parameters\n",
+    "\n",
+    "CONFIG_FILE: Path = Path(\n",
+    "    \"/home/martin/dev/benthoscan/config/advanced_registration.toml\"\n",
+    ")\n",
     "\n",
     "config: dict = read_toml(CONFIG_FILE).unwrap()\n",
     "\n",
-    "\n",
-    "registrators: dict[str, list] = {\n",
-    "    \"global\": list(),\n",
-    "    \"refinement\": list(),\n",
-    "}\n",
+    "modules: list[Module] = list()\n",
     "\n",
     "for module_config in config[\"modules\"]:\n",
     "\n",
     "    module_name: str = module_config[\"name\"]\n",
     "    module_type: str = module_config[\"type\"]\n",
     "\n",
+    "    preprocessors = [\n",
+    "        build_point_cloud_processor(model[\"method\"], model[\"parameters\"]).unwrap()\n",
+    "        for model in module_config[\"preprocessors\"]\n",
+    "    ]\n",
+    "\n",
     "    match module_type:\n",
     "        case \"feature\":\n",
     "            registrator: GlobalRegistrator = build_feature_registrator(\n",
     "                module_config[\"registrator\"],\n",
     "            ).unwrap()\n",
-    "            registrators[\"global\"].append(registrator)\n",
-    "\n",
     "        case \"icp\":\n",
     "            registrator: IncrementalRegistrator = build_icp_registrator(\n",
     "                module_config[\"registrator\"],\n",
     "            ).unwrap()\n",
-    "            registrators[\"refinement\"].append(registrator)\n",
     "        case other:\n",
     "            logger.error(f\"unknown module type: {module_type}\")\n",
+    "            registrator = None\n",
     "\n",
+    "    modules.append(Module(preprocessors=preprocessors, registrator=registrator))\n",
     "\n",
-    "for registrator in registrators:\n",
-    "    logger.info(f\"Registrator: {registrator}\")\n",
-    "\n",
-    "# TODO: Create preprocessors\n",
-    "\"\"\"\n",
-    "preprocessors: list[PointCloudProcessor] = [\n",
-    "    build_point_cloud_processor(item).unwrap()\n",
-    "    for item in module_config[\"preprocessors\"]\n",
-    "]\n",
-    "\"\"\"\n",
-    "\n",
-    "# TODO: Create registration pipeline"
+    "# TODO: Verify inference of global/incremental module\n",
+    "module_list: ModuleList = ModuleList(modules)"
    ]
   },
   {
@@ -278,123 +210,66 @@
    "id": "8adf86fc-7bd9-4670-bcb3-fb04f9b28b76",
    "metadata": {},
    "source": [
-    "### Debug builder functionality"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ed211514-f2a6-4254-adf6-b8b1f4d8ed3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-07-29 16:49:09.180\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.181\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.182\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.183\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     12476\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.185\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.42510562900368\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.186\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.09300614680802845\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.187\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9948146923102374\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.189\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.87220817 11.74153752 -0.21495641]\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.190\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99867315 -0.05126712 -0.0048595 ]\n",
-      " [ 0.05127641  0.99868287  0.00180654]\n",
-      " [ 0.00476048 -0.00205332  0.99998656]]\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:09.191\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.001\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.004\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.007\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.009\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     14663\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.011\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.49962518740629686\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.013\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.13944238345533272\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.015\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9948146923102376\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.017\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.6718127  11.3494237  -0.21625952]\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.019\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99830182 -0.05819045 -0.00271152]\n",
-      " [ 0.05817916  0.99829785 -0.00407258]\n",
-      " [ 0.00294389  0.00390791  0.99998803]]\u001b[0m\n",
-      "\u001b[32m2024-07-29 16:49:10.021\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "preprocessors: list[Callable] = [\n",
-    "    partial(downsample_point_cloud, spacing=0.20),\n",
-    "    partial(estimate_point_cloud_normals, radius=0.40),\n",
-    "]\n",
-    "\n",
-    "source_cloud: PointCloud = loaders[0]().unwrap()\n",
-    "target_cloud: PointCloud = loaders[3]().unwrap()\n",
-    "\n",
-    "for preprocessor in preprocessors:\n",
-    "    source_cloud: PointCloud = preprocessor(cloud=source_cloud)\n",
-    "    target_cloud: PointCloud = preprocessor(cloud=target_cloud)\n",
-    "\n",
-    "\n",
-    "result: RegistrationResult = registrators[\"global\"][0](\n",
-    "    source=source_cloud,\n",
-    "    target=target_cloud,\n",
-    ")\n",
-    "\n",
-    "log_registration(source=0, target=3, result=result)\n",
-    "\n",
-    "\n",
-    "result: RegistrationResult = registrators[\"refinement\"][0](\n",
-    "    source=source_cloud,\n",
-    "    target=target_cloud,\n",
-    "    transformation=result.transformation,\n",
-    ")\n",
-    "\n",
-    "log_registration(source=0, target=3, result=result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "af6af3fd-8028-4dcf-a60c-a0e8de778b3a",
-   "metadata": {},
-   "source": [
-    "### Execute several registration runs for a single case"
+    "### Build registration modules from config"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d45a62-912a-4d0e-897d-f9fab2837bcf",
+   "id": "ed211514-f2a6-4254-adf6-b8b1f4d8ed3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select some point clouds to tune the registration - 0-3 is the really hard case, but 1-3 and 2-3 are also challenging\n",
-    "test_source: int = 0\n",
-    "test_target: int = 3\n",
-    "test_runs: int = 10\n",
+    "from typing import Optional\n",
     "\n",
-    "test_results: list[RegistrationResult] = list()\n",
+    "source: int = 0\n",
+    "target: int = 3\n",
     "\n",
-    "source_loader: PointCloudLoader = loaders[test_source]\n",
-    "target_loader: PointCloudLoader = loaders[test_target]\n",
+    "source_cloud: PointCloud = loaders[source]().unwrap()\n",
+    "target_cloud: PointCloud = loaders[target]().unwrap()\n",
     "\n",
-    "logger.info(result)\n",
+    "module_results: list[RegistrationResult] = list()\n",
+    "current_result: Optional[RegistrationResult] = None\n",
     "\n",
-    "for i in range(test_runs):\n",
+    "for flag, module in module_list.modules:\n",
     "\n",
-    "    start: float = time()\n",
+    "    match flag:\n",
+    "        case \"global\":\n",
+    "            current_result: RegistrationResult = module.forward(\n",
+    "                source_cloud, target_cloud\n",
+    "            )\n",
+    "            log_registration(source=0, target=3, result=current_result)\n",
+    "            module_results.append(current_result)\n",
+    "        case \"incremental\":\n",
+    "            if not current_result:\n",
+    "                transformation: np.ndarray = np.identity(4)\n",
+    "            else:\n",
+    "                transformation: np.ndarray = current_result.transformation\n",
     "\n",
-    "    result: RegistrationResult = registration_worker(\n",
-    "        source_loader=source_loader,\n",
-    "        target_loader=target_loader,\n",
-    "        module=module,\n",
-    "    )\n",
+    "            current_result: RegistrationResult = module.forward(\n",
+    "                source_cloud, target_cloud, transformation\n",
+    "            )\n",
+    "            log_registration(source=0, target=3, result=current_result)\n",
+    "            module_results.append(current_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "13ea98e0-fd42-44d7-8302-8b586ad6dce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualize: bool = True\n",
     "\n",
-    "    end: float = time()\n",
-    "\n",
-    "    logger.info(\n",
-    "        f\"RANSAC run {i+1}/{test_runs} - Elapsed time {end - start:.3f} seconds\"\n",
-    "    )\n",
-    "\n",
-    "    log_registration(0, 3, result)\n",
-    "\n",
-    "    test_results.append(result)"
+    "if visualize:\n",
+    "    for index, result in enumerate(module_results):\n",
+    "        visualize_registration(\n",
+    "            source=source_cloud,\n",
+    "            target=target_cloud,\n",
+    "            transformation=result.transformation,\n",
+    "            title=f\"Module {index} - source: {source}, target: {target}\",\n",
+    "        )"
    ]
   },
   {
@@ -402,7 +277,7 @@
    "id": "3de5f9fa-13dd-4526-b565-ca80a5df4370",
    "metadata": {},
    "source": [
-    "### Define registration plotting functions"
+    "### Plot registration results"
    ]
   },
   {
@@ -551,136 +426,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70a015b7-fd6d-4270-8c9c-e6b75664601c",
-   "metadata": {},
-   "source": [
-    "### Perform coarse incremental registration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74d5cfa7-c6be-434b-8e1b-b3756e484cf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "icp_coarse_parameters = dict()\n",
-    "icp_coarse_parameters[\"voxel\"] = 0.08\n",
-    "icp_coarse_parameters[\"distance\"] = 0.04\n",
-    "\n",
-    "loss = reg.TukeyLoss(k=1.00)\n",
-    "icp_coarse_parameters[\"estimator\"] = reg.TransformationEstimationPointToPlane(loss)\n",
-    "\n",
-    "icp_preprocessor: Callable[[PointCloud], PointCloud] = partial(\n",
-    "    downsample_point_cloud,\n",
-    "    spacing=icp_coarse_parameters[\"voxel\"],\n",
-    ")\n",
-    "\n",
-    "icp_registrator = partial(\n",
-    "    register_point_cloud_icp,\n",
-    "    distance_threshold=icp_coarse_parameters[\"distance\"],\n",
-    "    distance_measure=icp_coarse_parameters[\"estimator\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39e78af0-9d78-4f9b-9a0b-a91a19a840ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_storage[\"incremental_coarse\"] = dict()\n",
-    "\n",
-    "for index in indices:\n",
-    "    source = index.source\n",
-    "\n",
-    "    results: dict[int, RegistrationResult] = dict()\n",
-    "\n",
-    "    for target in index.targets:\n",
-    "\n",
-    "        preliminary_result = result_storage[\"feature_matching\"][source][target]\n",
-    "\n",
-    "        source_cloud: PointCloud = loaders[source]().unwrap()\n",
-    "        target_cloud: PointCloud = loaders[target]().unwrap()\n",
-    "\n",
-    "        source_prepped: PointCloud = icp_preprocessor(source_cloud)\n",
-    "        target_prepped: PointCloud = icp_preprocessor(target_cloud)\n",
-    "\n",
-    "        refined_result: RegistrationResult = icp_registrator(\n",
-    "            source=source_prepped,\n",
-    "            target=target_prepped,\n",
-    "            transformation=preliminary_result.transformation,\n",
-    "        )\n",
-    "\n",
-    "        logger.info(f\"ICP - source {source}, target {target}\")\n",
-    "\n",
-    "        scale, rotation, translation = decompose_transformation(\n",
-    "            preliminary_result.transformation\n",
-    "        )\n",
-    "        logger.info(f\" - Initial: {translation}\")\n",
-    "\n",
-    "        scale, rotation, translation = decompose_transformation(\n",
-    "            refined_result.transformation\n",
-    "        )\n",
-    "        logger.info(f\" - Refined: {translation}\")\n",
-    "\n",
-    "        results[target] = refined_result\n",
-    "\n",
-    "    result_storage[\"incremental_coarse\"][source] = results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b2c5dab-8cb8-49a0-8996-390d777cfa88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visualize_incremental_results: bool = False\n",
-    "\n",
-    "if visualize_incremental_results:\n",
-    "\n",
-    "    for source, registrations in result_storage[\"incremental_coarse\"].items():\n",
-    "\n",
-    "        source_cloud: PointCloud = loaders[source]().unwrap()\n",
-    "\n",
-    "        for target, result in registrations.items():\n",
-    "\n",
-    "            target_cloud: PointCloud = loaders[target]().unwrap()\n",
-    "\n",
-    "            visualize_registration(\n",
-    "                source=source_cloud,\n",
-    "                target=target_cloud,\n",
-    "                transformation=result.transformation,\n",
-    "                title=f\"Registration - source: {source}, target: {target}\",\n",
-    "            )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "289a4963-ac0d-4de0-a726-4835c2683937",
-   "metadata": {},
-   "source": [
-    "### TODO: Perform fine / colored registration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82a637ae-6825-40bd-90d3-2c1cebf6ac06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Add colored ICP"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4752fa78-862a-4688-ad62-8d4ae5d9d1bc",
    "metadata": {},
    "source": [
-    "### TODO: Perform multiway registration"
+    "### Perform multiway registration"
    ]
   },
   {
