--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -22,14 +22,6 @@
       "[Open3D INFO] WebRTC GUI backend enabled.\n",
       "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Can't use license /var/tmp/agisoft/licensing/licenses/metashape-pro.lic: License expired\n",
-      "No license server found\n"
-     ]
     }
    ],
    "source": [
@@ -161,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "59fa67a2-b3d6-4e51-9967-7df97d9fa2d1",
    "metadata": {},
    "outputs": [],
@@ -215,10 +207,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ed211514-f2a6-4254-adf6-b8b1f4d8ed3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-08-01 14:44:53.622\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.622\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.622\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.623\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     12743\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.623\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.4290861337463802\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.623\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.09046721081493872\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.623\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9846187324427396\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.624\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.99442622 11.93749931 -0.69582168]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.624\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99939454 -0.03465206 -0.00312816]\n",
+      " [ 0.03465895  0.99939683  0.0021776 ]\n",
+      " [ 0.00305081 -0.0022847   0.99999274]]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:53.624\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.875\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.883\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.883\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.884\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     2522\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.884\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.5194644696189495\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.884\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.3137947607930677\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.885\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.98461873244274\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.885\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.78129013 11.49322008 -0.65554723]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.886\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99800043 -0.06306887 -0.00417864]\n",
+      " [ 0.06307892  0.99800585  0.00231641]\n",
+      " [ 0.00402421 -0.00257536  0.99998859]]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:44:58.887\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.253\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.254\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.254\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.254\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     6391\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.48700754400670576\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.1682832029580971\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9846187324427403\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.87679598 11.62133201 -0.67762355]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 9.98581563e-01 -5.31215685e-02 -3.59999985e-03]\n",
+      " [ 5.31230142e-02  9.98587929e-01  3.07081190e-04]\n",
+      " [ 3.57860375e-03 -4.97888458e-04  9.99993473e-01]]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:04.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.895\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.896\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.896\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.896\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     25909\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.896\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.467578639620292\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.897\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.09331268643200535\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.897\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9846187324427401\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.897\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.94535208 11.71861557 -0.69527312]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.898\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99888842 -0.04709092 -0.00209186]\n",
+      " [ 0.04708765  0.9988895  -0.00158781]\n",
+      " [ 0.00216431  0.00148754  0.99999655]]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:09.898\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.973\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.974\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.975\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.977\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     198381\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.978\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.39094320139050376\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.978\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.04629303841240206\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.979\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9846187324427402\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.980\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.89788404 11.79328466 -0.67757073]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.980\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 9.98923108e-01 -4.63310747e-02 -2.46104356e-03]\n",
+      " [ 4.63285719e-02  9.98925688e-01 -1.06444833e-03]\n",
+      " [ 2.50771666e-03  9.49285397e-04  9.99996405e-01]]\u001b[0m\n",
+      "\u001b[32m2024-08-01 14:45:20.981\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import Optional\n",
     "\n",
@@ -255,10 +314,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "13ea98e0-fd42-44d7-8302-8b586ad6dce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: GLX: Failed to create context: BadValue (integer parameter out of range for operation)\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] Failed to create window\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] [DrawGeometries] Failed creating OpenGL window.\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: GLX: Failed to create context: BadValue (integer parameter out of range for operation)\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] Failed to create window\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] [DrawGeometries] Failed creating OpenGL window.\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: GLX: Failed to create context: BadValue (integer parameter out of range for operation)\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] Failed to create window\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] [DrawGeometries] Failed creating OpenGL window.\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: GLX: Failed to create context: BadValue (integer parameter out of range for operation)\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] Failed to create window\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] [DrawGeometries] Failed creating OpenGL window.\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: GLX: Failed to create context: BadValue (integer parameter out of range for operation)\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] Failed to create window\u001b[0;m\n",
+      "\u001b[1;33m[Open3D WARNING] [DrawGeometries] Failed creating OpenGL window.\u001b[0;m\n"
+     ]
+    }
+   ],
    "source": [
     "visualize: bool = True\n",
     "\n",
