Rename setup task to ingestion task. Refactor ingestion task workflow. Add configuration for frames and sensors, and remove camera labels. Refactor Metashape ingestion service and helpers.

--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -131,12 +131,14 @@
     "    3: DATA_DIR / Path(\"qdc5ghs3_20210315_230947.ply\"),\n",
     "}\n",
     "\n",
-    "loaders: dict = { key: create_point_cloud_loader(path) for key, path in point_cloud_files.items() }\n",
+    "loaders: dict = {\n",
+    "    key: create_point_cloud_loader(path) for key, path in point_cloud_files.items()\n",
+    "}\n",
     "\n",
     "for key, loader in loaders.items():\n",
     "    test: PointCloud = loader()\n",
     "    logger.info(f\"key {key}, loader {loader}, loaded {test}\")\n",
-    "    \n",
+    "\n",
     "\n",
     "count = len(loaders)\n",
     "if count < 2:\n",
