--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -124,7 +124,9 @@
     "\n",
     "PointCloudLoaders = dict[int, PointCloudLoader]\n",
     "\n",
-    "result: Result[PointCloudLoaders, str] = backend.request_dense_models(PATHS[\"CACHE\"], overwrite=True)"
+    "result: Result[PointCloudLoaders, str] = backend.request_dense_models(\n",
+    "    PATHS[\"CACHE\"], overwrite=True\n",
+    ")"
    ]
   },
   {
