Implement stereo rectification and disparity estimation.

--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "3413621b-2dfc-4485-9d30-20f34fbcb460",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -35,47 +37,44 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-08-05 15:30:00.590\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbenthoscan.backends.metashape.context\u001b[0m:\u001b[36mlog_internal_data\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1m{'document': None}\u001b[0m\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LoadProject: path = /media/martin/pcie_01/acfr_revisits_metashape_projects/qd61g27j_working_version.psz\n"
+      "LoadProject: path = /data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-05 15:32:53.976\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m16\u001b[0m - \u001b[1mloaded document /media/martin/pcie_01/acfr_revisits_metashape_projects/qd61g27j_working_version.psz successfully\u001b[0m\n",
-      "\u001b[32m2024-08-05 15:32:53.978\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbenthoscan.backends.metashape.context\u001b[0m:\u001b[36mlog_internal_data\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1m{'document': <Document '/media/martin/pcie_01/acfr_revisits_metashape_projects/qd61g27j_working_version.psz'>}\u001b[0m\n"
+      "\u001b[32m2024-08-15 13:38:27.745\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mloaded document /data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz successfully\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded project in 173.291 sec\n"
+      "loaded project in 26.6141 sec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-08-15 13:38:27.746\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbenthoscan.backends.metashape.context\u001b[0m:\u001b[36mlog_internal_data\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1m{'document': <Document '/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz'>}\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "PATHS: dict[str, Path] = {\n",
     "    \"DOCUMENT_IN\": Path(\n",
-    "        \"/media/martin/pcie_01/acfr_revisits_metashape_projects/qd61g27j_working_version.psz\"\n",
+    "        \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
     "    ),\n",
     "    \"DOCUMENT_OUT\": Path(\n",
-    "        \"/media/martin/pcie_01/acfr_revisits_metashape_projects_test/qd61g27j_project_saved.psz\"\n",
+    "        \"/data/kingston_snv_01/acfr_revisits_metashape_projects_test/r23685bc_working_version_saved.psz\"\n",
     "    ),\n",
     "    \"CACHE\": Path(\"/home/martin/dev/benthoscan/.cache/\"),\n",
     "}\n",
-    "\n",
-    "backend.log_internal_data()\n",
     "\n",
     "result: Result[str, str] = backend.load_project(PATHS.get(\"DOCUMENT_IN\"))\n",
     "match result:\n",
@@ -97,40 +96,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c4d49f1f-4a5f-4ce0-bc6c-f137d0f71ee3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = Metashape.app.document\n",
+    "export_point_clouds: bool = False\n",
     "\n",
-    "logger.info(test)\n",
-    "logger.info(backend.context._backend_data)\n",
-    "\n",
-    "PointCloudLoaders = dict[int, PointCloudLoader]\n",
-    "\n",
-    "result: Result[PointCloudLoaders, str] = backend.request_dense_models(\n",
-    "    PATHS[\"CACHE\"], overwrite=True\n",
-    ")"
+    "if export_point_clouds:\n",
+    "    PointCloudLoaders = dict[int, PointCloudLoader]\n",
+    "    \n",
+    "    result: Result[PointCloudLoaders, str] = backend.request_dense_models(\n",
+    "        PATHS[\"CACHE\"], overwrite=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04bf9e58-3ca6-4007-86f5-521392550f0c",
+   "metadata": {},
+   "source": [
+    "### Test stereo depth estimation on camera pairs from Metashape chunks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a202e6d2-72ec-40ff-8335-9116aacc31f1",
+   "execution_count": 4,
+   "id": "f0755b9b-6c17-4266-961c-e7745e3a536c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "match result:\n",
-    "    case Ok(loaders):\n",
-    "        for key, loader in loaders.items():\n",
-    "            logger.info(f\"{key}: {loader}\")\n",
-    "    case Err(message):\n",
-    "        logger.error(message)\n",
+    "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "for key, loader in loaders.items():\n",
-    "    pc: PointCloud = loader()\n",
-    "    logger.info(pc)"
+    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
+    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "\n",
+    "\n",
+    "output_root: Path = Path(\"/data/kingston_snv_01/rendered_range_maps\")"
    ]
   }
  ],
