Implement intermediate data structures for stereo rectification. Implement functions that convert Metashape calibrations to intermediate representations. Format code.

--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "if export_point_clouds:\n",
     "    PointCloudLoaders = dict[int, PointCloudLoader]\n",
-    "    \n",
+    "\n",
     "    result: Result[PointCloudLoaders, str] = backend.request_dense_models(\n",
     "        PATHS[\"CACHE\"], overwrite=True\n",
     "    )"
@@ -128,8 +128,10 @@
    "source": [
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
-    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
+    "target_chunks: list[Metashape.Chunk] = [\n",
+    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
+    "]\n",
     "\n",
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/rendered_range_maps\")"
