--- a/notebooks/export_stereo_range_maps.ipynb
+++ b/notebooks/export_stereo_range_maps.ipynb
@@ -253,18 +253,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from benthoscan.backends.metashape.stereo_funcs import (\n",
+    "from benthoscan.backends.metashape.camera_helpers import (\n",
     "    SensorPair, \n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
-    "    compute_stereo_extrinsics,\n",
-    "    image_to_numpy,\n",
+    "    compute_camera_calibration,\n",
+    "    compute_stereo_calibration,\n",
+    "    image_to_array,\n",
+    "    get_stereo_groups,\n",
     ")\n",
     "\n",
     "from benthoscan.geometry.stereo import (\n",
+    "    CameraCalibration,\n",
+    "    StereoCalibration,\n",
     "    RectifyingHomography,\n",
     "    RectifyingPixelMap,\n",
-    "    get_stereo_groups,\n",
     "    compute_rectifying_homographies,\n",
     "    compute_rectifying_pixel_maps,\n",
     "    rectify_image_pair,\n",
@@ -274,18 +277,20 @@
     "def process_stereo_images(chunk: Metashape.Chunk, sensors: SensorPair, camera_pairs: list[CameraPair]):\n",
     "    \"\"\"Get the stereo images\"\"\"\n",
     "    \n",
-    "    location, rotation = compute_stereo_extrinsics(sensors)\n",
+    "    #location, rotation = compute_stereo_extrinsics(sensors)\n",
     "\n",
-    "    homographies: RectifyingHomography = compute_rectifying_homographies(sensors)\n",
-    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(sensors, homographies)\n",
+    "    calibration: StereoCalibration = compute_stereo_calibration(sensors)\n",
+    "\n",
+    "    homographies: RectifyingHomography = compute_rectifying_homographies(calibration)\n",
+    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(calibration, homographies)\n",
     "\n",
     "    for index, camera_pair in enumerate(camera_pairs):\n",
     "        \n",
     "        master_image: Metashape.Image = camera_pair.master.image()\n",
     "        slave_image: Metashape.Image = camera_pair.slave.image()\n",
     "\n",
-    "        converted_master: np.ndarray = np.squeeze(image_to_numpy(master_image))\n",
-    "        converted_slave: np.ndarray = np.squeeze(image_to_numpy(slave_image))\n",
+    "        converted_master: np.ndarray = np.squeeze(image_to_array(master_image))\n",
+    "        converted_slave: np.ndarray = np.squeeze(image_to_array(slave_image))\n",
     "        \n",
     "        match master_image.channels:\n",
     "            case \"RGB\":\n",
@@ -305,7 +310,7 @@
     "\n",
     "        # Convert disparity to range estimates\n",
     "        inverse_disparity: np.ndarray = 1.0 / disparity_maps[0]\n",
-    "        range_map: np.ndarray = (inverse_disparity * (1834.0 * location[0])).astype(np.float32)\n",
+    "        range_map: np.ndarray = (inverse_disparity * (1834.0 * calibration.extrinsics.location[0])).astype(np.float32)\n",
     "\n",
     "        # TODO: Plot image side by side \n",
     "        # Look into rendering images with Open3D\n",
@@ -363,9 +368,7 @@
     "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
     "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
     "\n",
-    "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/stereo_range_maps\")\n",
-    "\n",
     "\n",
     "# Generate range maps based on stereo pairs\n",
     "for chunk in target_chunks:\n",
